<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cons_update"
        android:title="@string/update_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/cons_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/cons_contact"
        android:title="@string/contact_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/cons_share"
        android:title="@string/share_app"
        app:showAsAction="never" />

  <item
        android:id="@+id/cons_logout"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>