<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_switch"
        android:title="Switch Account"
        app:showAsAction="never" />

    <item
        android:id="@+id/home_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/home_contact"
        android:title="@string/contact_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/home_share"
        android:title="@string/share_app"
        app:showAsAction="never" />

  <item
        android:id="@+id/home_logout"
        android:title="Log Out"
        app:showAsAction="never" />

</menu>