<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerInfo">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facility_details"
            android:textSize="27sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/facility_name"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fac_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_facility"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/authority_name"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fac_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/select_facility_type_below"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cat_spin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:entries="@array/activity_array"
            android:padding="15dp"
            android:prompt="@string/Type_prompt"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/occupancy_number"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fac_occ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_occnum"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fac_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/continue_txt"
            android:textAllCaps="false" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/info"
            android:layout_margin="16dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
