<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gerray.ConstructionApp.Authentication.CreateActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/second_name"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_secondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email_address"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Category:"
                android:id="@+id/tv_cat"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:id="@+id/cat_spin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv_cat"
                android:entries="@array/category_arrays"
                android:prompt="@string/category_prompt"
                android:spinnerMode="dropdown"
                android:textAlignment="gravity" />
        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="#000"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_passkey"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:textColorHint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_passkey"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sg_create"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_style"
            android:text="@string/create_new_account" />

        <Button
            android:id="@+id/sg_login"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_style"
            android:text="@string/already_have_an_account_login"
            android:textAllCaps="false" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>