<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fadeScrollbars="false"
    android:padding="5dp"
    android:scrollbars="vertical"
    tools:context=".ConsultantModule.UpdateConsultant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/consultant_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <Button
            android:id="@+id/consultant_btnImage"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="Add Image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consultant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consultant_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consultant_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/consEmp_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:entries="@array/consultant_category"
                android:padding="15dp"
                android:prompt="@string/cons_cat"
                android:spinnerMode="dropdown"
                android:textAlignment="inherit" />

            <Spinner
                android:id="@+id/consSpec_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:entries="@array/consultant_specialization"
                android:padding="15dp"
                android:prompt="@string/cons_specs"
                android:spinnerMode="dropdown"
                android:textAlignment="inherit" />

            <Spinner
                android:id="@+id/consLoc_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:entries="@array/consultant_location"
                android:padding="15dp"
                android:prompt="@string/cons_locate"
                android:spinnerMode="dropdown"
                android:textAlignment="inherit" />

        </LinearLayout>


        <Button
            android:id="@+id/cons_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="Update" />

    </LinearLayout>
</ScrollView>